Update Korean docs: formatting, tables, and images
Improved formatting in multiple Korean documentation files by standardizing line breaks, converting markdown tables to HTML tables, and updating info blocks. Added new illustrative images to cryptography, custom indexer, and architecture sections. Minor keyword and metadata adjustments were also made for consistency.

--- a/i18n/ko/docusaurus-plugin-content-docs/current/concepts/transactions/sponsored-transactions.mdx
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/concepts/transactions/sponsored-transactions.mdx
@@ -12,7 +12,7 @@ keywords:
   - paying gas for another user
   - paying for someone else
   - paying gas for someone else
- "- sponsoring someone's transaction"
+  - sponsoring someone's transaction
 ---
 
 Sui sponsored transaction은 한 Sui address(sponsor의 address)가 다른 address(사용자의 address)가 초기화한 transaction의 gas fee를 지불하는 것을 의미한다. Sponsored transaction을 사용하면 사이트나 앱의 사용자가 fee를 부담하지 않도록 대신 지불할 수 있다. 이는 Web2 사용자가 Web3로 진입할 때 맞닥뜨리는 on-chain에서 transaction을 수행하기 위해 토큰을 구매해야 하는 중요한 장벽을 제거한다. 예를 들어, 전환율을 높이기 위해 게이머의 초기 transaction을 sponsor할 수 있다.
