--- a/i18n/ko/docusaurus-plugin-content-docs/current/references/rust-sdk.mdx
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/references/rust-sdk.mdx
@@ -11,4 +11,4 @@ keywords:
 
 Sui Rust SDK 크레이트는 Sui 저장소의 [**crates\sui-sdk** directory](https://github.com/MystenLabs/sui/tree/main/crates/sui-sdk) 에 있다.
 
-<importcontent source="crates/sui-sdk/README.md" mode="code" style="md"></importcontent>
+<ImportContent source="crates/sui-sdk/README.md" mode="code" style="md" />
