--- a/i18n/ko/docusaurus-plugin-content-docs/current/concepts/sui-move-concepts/packages/custom-policies.mdx
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/concepts/sui-move-concepts/packages/custom-policies.mdx
@@ -22,20 +22,51 @@ keywords:
 
 Sui는 내장된 패키지 호환성 정책 세트를 제공하며, 가장 엄격한 것부터 가장 느슨한 것까지 다음과 같이 나열된다:
 
-Policy | Description
---- | ---
-Immutable | 누구도 패키지를 업그레이드할 수 없다.
-Dependency-only | 패키지의 의존성만 수정할 수 있다.
-Additive | 패키지에 새로운 기능(예: 새로운 public 함수 또는 구조체)을 추가할 수 있지만 기존 기능(예: 기존 public 함수의 코드)은 변경할 수 없다.
-Compatible | 가장 느슨한 정책이다. 더 제한적인 정책이 허용하는 것에 더하여, 패키지의 업그레이드 버전에서: <ul>
-<li>모든 함수 구현을 변경할 수 있다.</li>
-<li>함수 시그니처의 제네릭 타입 파라미터에 대한 ability 제약을 제거할 수 있다.</li>
-<li>
-<code>private</code>, <code>public(friend)</code>, <code>entry</code> 함수 시그니처를 변경, 제거하거나 <code>public</code>으로 만들 수 있다.</li>
-<li>
-<code>public</code> 함수 시그니처는 변경할 수 없다(이전에 언급한 ability 제약의 경우는 제외).</li>
-<li>기존 타입을 변경할 수 없다.</li>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>Policy</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Immutable</td>
+      <td>누구도 패키지를 업그레이드할 수 없다.</td>
+    </tr>
+    <tr>
+      <td>Dependency-only</td>
+      <td>패키지의 의존성만 수정할 수 있다.</td>
+    </tr>
+    <tr>
+      <td>Additive</td>
+      <td>
+        패키지에 새로운 기능(예: 새로운 public 함수 또는 구조체)을 추가할 수 있지만 기존
+        기능(예: 기존 public 함수의 코드)은 변경할 수 없다.
+      </td>
+    </tr>
+    <tr>
+      <td>Compatible</td>
+      <td>
+        가장 느슨한 정책이다. 더 제한적인 정책이 허용하는 것에 더하여, 패키지의 업그레이드
+        버전에서:
+        <ul>
+          <li>모든 함수 구현을 변경할 수 있다.</li>
+          <li>함수 시그니처의 제네릭 타입 파라미터에 대한 ability 제약을 제거할 수 있다.</li>
+          <li>
+            <code>private</code>, <code>public(friend)</code>, <code>entry</code> 함수 시그니처를
+            변경, 제거하거나 <code>public</code>으로 만들 수 있다.
+          </li>
+          <li>
+            <code>public</code> 함수 시그니처는 변경할 수 없다(이전에 언급한 ability 제약의
+            경우는 제외).
+          </li>
+          <li>기존 타입을 변경할 수 없다.</li>
+        </ul>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 나열된 순서대로, 각 정책은 이전 정책들의 허용 기준이 누적되어 통합된 형태다.
 
@@ -132,7 +163,7 @@ Sui가 `UpgradeReceipt`를 생성한 후에는 동일한 transaction 내에서 `
 - 해당 패키지를 불변으로 만들고(업그레이드 불가능),
 - `UpgradeCap`의 정책을 잠궈서 나중에 정책이 덜 제한적으로 만들어질 수 없도록 한다.
 
-<br>이러한 모범 사례는 사용자가 값을 잠그는 순간에 패키지의 업그레이드 정책이 무엇인지 명확히 하고, 패키지 사용자가 인식하지 못하거나 새 조건을 수용하기로 선택하지 않고도 정책이 시간이 지남에 따라 더 허용적으로 변화하지 않도록 보장함으로써 **정보에 입각한 사용자 동의**와 **제한된 위험**을 지지하는 데 도움이 된다.
+<br />이러한 모범 사례는 사용자가 값을 잠그는 순간에 패키지의 업그레이드 정책이 무엇인지 명확히 하고, 패키지 사용자가 인식하지 못하거나 새 조건을 수용하기로 선택하지 않고도 정책이 시간이 지남에 따라 더 허용적으로 변화하지 않도록 보장함으로써 **정보에 입각한 사용자 동의**와 **제한된 위험**을 지지하는 데 도움이 된다.
 
 ## Example: Day of the week upgrade policy {#example-upgrade}
 
