--- a/i18n/ko/docusaurus-plugin-content-docs/current/references/cli/cheatsheet.mdx
+++ b/i18n/ko/docusaurus-plugin-content-docs/current/references/cli/cheatsheet.mdx
@@ -187,23 +187,23 @@ keywords:
 	</thead>
 	<tbody>
 		<tr>
-			<td class="w-2/3">`sui client call \`<br>  `--package PACKAGE \`<br>  `--module MODULE \`<br>  `--function FUNCTION`</td>
+			<td class="w-2/3">`sui client call \`<br />  `--package PACKAGE \`<br />  `--module MODULE \`<br />  `--function FUNCTION`</td>
 			<td class="w-1/3">Move 패키지를 호출한다</td>
 		</tr>
 		<tr>
-			<td class="w-2/3">`sui client merge-coin \`<br>  `--primary-coin COIN_ID \`<br>  `--coin-to-merge COIN_ID`</td>
+			<td class="w-2/3">`sui client merge-coin \`<br />  `--primary-coin COIN_ID \`<br />  `--coin-to-merge COIN_ID`</td>
 			<td class="w-1/3">두 코인을 merge한다.</td>
 		</tr>
 		<tr>
-			<td class="w-2/3">`sui client split-coin \`<br>  `--coin-id COIN_ID \`<br>  `--amounts 1000`</td>
+			<td class="w-2/3">`sui client split-coin \`<br />  `--coin-id COIN_ID \`<br />  `--amounts 1000`</td>
 			<td class="w-1/3">코인을 두 개로 나눈다. 하나는 1000 MIST가 들어있고 나머지는 다른 하나에 있다</td>
 		</tr>
 		<tr>
-			<td class="w-2/3"> 				`sui client pay-sui \`<br>  `--input-coins COIN_ID \`<br>  `--recipients ADDRESS \`<br>  `--amounts 100000000`</td>
+			<td class="w-2/3"> 				`sui client pay-sui \`<br />  `--input-coins COIN_ID \`<br />  `--recipients ADDRESS \`<br />  `--amounts 100000000`</td>
 			<td class="w-1/3">0.1 SUI를 주소로 전송하고 동일한 코인을 가스로 사용한다.</td>
 		</tr>
 		<tr>
-			<td class="w-2/3">`sui client transfer-sui \`<br>  `--sui-coin-object-id COIN_ID \`<br>  `--to ADDRESS`</td>
+			<td class="w-2/3">`sui client transfer-sui \`<br />  `--sui-coin-object-id COIN_ID \`<br />  `--to ADDRESS`</td>
 			<td class="w-1/3">SUI object를 주소로 전송하고 동일한 코인을 가스에 사용한다.</td>
 		</tr>
 	</tbody>
@@ -211,6 +211,42 @@ keywords:
 
 ## Programmable transaction blocks (PTBs)
 
-<table class="w-100"> 	<thead> 		<tr> 			<td>Command</td> 			<td>Description</td> 		</tr> 	</thead> 	<tbody> 		<tr> 			<td class="w-2/3">`sui client ptb --move-call p::m::f "<type>" args`</type>
-</td> 			<td class="w-1/3">패키지 및 모듈에서 Move 함수 호출</td> 		</tr> 		<tr> 			<td class="w-2/3">`sui client ptb --make-move-vec "<u>" "[1000,2000]"`</u>
-</td> 			<td class="w-1/3">u64 유형의 두 요소를 사용하여 Move 벡터를 만든다.</td> 		</tr> 		<tr> 			<td class="w-2/3"> 				`sui client ptb \`<br>  `--split-coins gas "[1000]" \`<br>  `--assign new_coins \`<br>  `--transfer-objects 				"[new_coins]" ADDRESS` 			</td> 			<td class="w-1/3">가스 코인을 나눠서 주소로 이체한다</td> 		</tr> 		<tr> 			<td class="w-2/3">`sui client ptb --transfer-objects "[object_id]" ADDRESS`</td> 			<td class="w-1/3"> 				Object를 주소로 전송한다. 배열에 여러 object를 전달할 수 있다. 			</td> 		</tr> 		<tr> 			<td class="w-2/3"> 				`sui client ptb \`<br>  `--move-call sui::tx_context::sender \`<br>  `--assign sender \`<br>  `--publish "." \`<br>  `--assign 				upgrade_cap \`<br>  `--transfer-objects "[upgrade_cap]" sender` 			</td> 			<td class="w-1/3">Move 패키지를 게시하고 upgrade capability를 전송자에게 전송한다.</td> 		</tr> 	</tbody> </table>
+<table class="w-100">
+  <thead>
+    <tr>
+      <td>Command</td>
+      <td>Description</td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="w-2/3">`sui client ptb --move-call p::m::f "<type>" args`</td>
+      <td class="w-1/3">패키지 및 모듈에서 Move 함수 호출</td>
+    </tr>
+    <tr>
+      <td class="w-2/3">`sui client ptb --make-move-vec "<u>" "[1000,2000]"`</td>
+      <td class="w-1/3">u64 유형의 두 요소를 사용하여 Move 벡터를 만든다.</td>
+    </tr>
+    <tr>
+      <td class="w-2/3">
+        `sui client ptb \`<br />  `--split-coins gas "[1000]" \`<br />  `--assign
+        new_coins \`<br />  `--transfer-objects "[new_coins]" ADDRESS`
+      </td>
+      <td class="w-1/3">가스 코인을 나눠서 주소로 이체한다</td>
+    </tr>
+    <tr>
+      <td class="w-2/3">`sui client ptb --transfer-objects "[object_id]" ADDRESS`</td>
+      <td class="w-1/3">
+        Object를 주소로 전송한다. 배열에 여러 object를 전달할 수 있다.
+      </td>
+    </tr>
+    <tr>
+      <td class="w-2/3">
+        `sui client ptb \`<br />  `--move-call sui::tx_context::sender \`<br />  `--assign
+        sender \`<br />  `--publish "." \`<br />  `--assign upgrade_cap \`<br />  `--transfer-objects
+        "[upgrade_cap]" sender`
+      </td>
+      <td class="w-1/3">Move 패키지를 게시하고 upgrade capability를 전송자에게 전송한다.</td>
+    </tr>
+  </tbody>
+</table>
